# air-pollution

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: Air Quality Index Gios.ipynb  Filtering excel files and picking right parameters.ipynb  Fixing missing lat and lon in stations .ipynb  ML PM2.5.ipynb  Matching Synop with Smogoliczka final.ipynb  Matching stations synop with Smogoliczka .ipynb  Matching synop data with smogoliczka.ipynb  New Strategy script for excel files.ipynb  Repairing stations names and merging into one .ipynb  Smogoliczka API to pomiary_pivot.ipynb  Untitled.ipynb  eda without progress-Copy4.ipynb  loader_sql.py
