[tool.poetry]
name = "smogoliczka"
version = "0.1.0"
description = ""
authors = ["Santhin <psierkin@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.7.1,<4.0"
dask = {extras = ["distributed"], version = "^2021.4.1"}
pandas = "^1.2.4"
notebook = "^6.3.0"
jupyter = "^1.0.0"
python-dotenv = "^0.17.1"
SQLAlchemy = "^1.4.12"
tqdm = "^4.60.0"
plotly = "^4.14.3"
coiled = "^0.0.38"
pyodbc = "^4.0.30"
sklearn = "^0.0"
xgboost = "^1.4.1"
ml_metrics = "^0.1.4"
optuna = "^2.7.0"
shap = "^0.39.0"
lz4 = "^3.1.3"
blosc = "^1.10.2"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]
jupyter-tabnine = "^1.2.2"
jupyter_nbextensions_configurator = "^0.4.1"
autopep8 = "^1.5.7"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
